# cpp-token-counting

./: .clangd  .gitignore  CMakeLists.txt  JetBrainsMono.h  Keywords.h  README.md  Regexp.cpp  Regexp.h  file_manager.cpp  file_manager.h  framework.cpp  framework.h  main.cpp  parser.cpp  parser.h  save_dialog.cpp  save_dialog.h  structures.h  Дневник проекта.md  Как компилировать.md
test/: parser.cpp  test_file.cpp  tester.cpp
test/identifier/: test_file.cpp
